# snncompare

./: .gitignore  .pre-commit-config.yaml  README.md  dev-requirements.txt  environment.yml  pyproject.toml  requirements.txt  results.txt  setup.cfg  setup.py  snn_rebuild.sh  snnrb
latex/Images/: completed_run_configs.pickle
latex/tables/: example_table_name.txt
src/: LIF_neuron.py  Plot_to_tex.py  Radiation_damage.py  Scope_of_tests.py  Supported_settings.py  Used_graphs.py  __main__.py  arg_parser.py  brain_adaptation.py  convert_networkx_to_lava.py  create_testobject.py  experiment_settings.py  export_json_results.py  get_alipour_nodes.py  get_graph.py  helper.py  helper_network_structure.py  load_pickles_get_results.py  old_conversion.py  pickle_load_graphs.py  plot_graphs.py  process_results.py  run_on_lava.py  run_on_networkx.py  verification_generic.py  verify_graph_is_snn.py  verify_supported_settings.py
tests/: _death_prob0.25_adapt_True_raddamTrue__seed42_size3_m0_iter1_hash-5432048059257968152.json  _death_prob0.25_adapt_True_raddamTrue__seed42_size3_m0_iter1_hash-5432048059257968152.pkl  conftest.py  create_testobject.py  probability_0.25adapt_True_42_size3_m0_iter1_-2339717364940446461.pkl  test_cyclic_graph_propagation.py  test_get_graph.py  test_get_results.py  test_has_recurrent_edge.py  test_has_recurrent_edge_lava.py  test_has_recurrent_edge_networkx.py  test_process_results.py  test_rand_network_generation.py  test_rand_network_propagation.py  test_scope.py  test_supported_m_settings.py  test_supported_settings_adaptation.py  test_supported_settings_m.py  test_supported_settings_radiation.py  tests_helper.py
(+449 files in other folders)
